--- a/src/dotnet-api/RinhaBackend2025.csproj
+++ b/src/dotnet-api/RinhaBackend2025.csproj
@@ -1,23 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-	<PublishAot>true</PublishAot>
-	<IsAotCompatible>true</IsAotCompatible>
-    <UserSecretsId>bf6e2922-54ea-437c-ba9c-a43cded0add9</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<PublishAot>true</PublishAot>
+		<IsAotCompatible>true</IsAotCompatible>
+		<UserSecretsId>bf6e2922-54ea-437c-ba9c-a43cded0add9</UserSecretsId>
+		<DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
-    <PackageReference Include="Npgsql" Version="9.0.3" />
-	<PackageReference Include="StackExchange.Redis" Version="2.8.58" />
-  </ItemGroup>
-	
-  <PropertyGroup>
-    <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
-    <DockerfileContext>.</DockerfileContext>
-  </PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
+		<PackageReference Include="Npgsql" Version="9.0.3" />
+		<PackageReference Include="Polly" Version="8.6.1" />
+		<PackageReference Include="StackExchange.Redis" Version="2.8.58" />
+	</ItemGroup>
+
+	<PropertyGroup>
+		<SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
+		<DockerfileContext>.</DockerfileContext>
+	</PropertyGroup>
 </Project>
